--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,6 +4,7 @@
                 <meta charset="utf-8">
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
                 <title>NAS Controller</title>
+                <link rel="icon" href="/iconfinder_power_1287516.ico" />
         </head>
         <body>
                 <p id="stats"></p>
@@ -41,7 +42,7 @@ $("#on").click(function() {
                                 getStatus();
                         }
                         else {
-                                alert(response.msg);        
+                                alert(response.msg);
                         }
                 }
         })
