--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,10 +7,12 @@
                 <link rel="icon" href="/iconfinder_power_1287516.ico" />
         </head>
         <body>
-                <p id="stats"></p>
-                <input id="psswd" placeholder="Password here" value="123456">
-                <button id="on">On</button>
-                <button id="off">Off</button>
+                <div style="display:flex; flex-direction:column;">
+                        <p id="stats"></p>
+                        <input id="psswd" placeholder="Password here" value="123456">
+                        <button id="on">On</button>
+                        <button id="off">Off</button>
+                </div>
         </body>
 </html>
 <script type="text/javascript">
